Fix overflow scrolling.

--- a/modal/_style.scss
+++ b/modal/_style.scss
@@ -41,7 +41,3 @@
   padding: 5px 5px 15px 15px;
   background-position: 15px 5px;
 }
-
-.rag-modal-scroller {
-  @extend %full-height;
-}
